@@ -2,6 +2,7 @@ Revision history for Pandoc-Elements
 
 {{$NEXT}}
     - Add pandoc-filters script to run filters specified in document metadata 
+    - Let pandoc_walk/pandoc_filter not filter metadata fields
 
 0.21  2016-09-19 22:05:43 CEST
     - extend method 'keyvals' as setter
